# iarc_mission7

./: .gitignore  README.md
gazebo_tutorials/: package.xml
gazebo_tutorials/launch/: roomba.launch
gazebo_tutorials/src/: simple_world_plugin.cpp
gazebo_tutorials/worlds/: roomba_test.world
quadcopter_test/: CMakeLists.txt  package.xml
quadcopter_test/launch/: outdoor_flight_gazebo.launch
quadcopter_test/src/: Tap_Decision.cpp  Tap_Decision.h  Tap_main.cpp  flight_test.cpp  flight_test.h  main.cpp  vector_calc.cpp  vector_calc.h  vector_main.cpp
quadcopter_test/worlds/: empty_world_test.world
quadcopter_test/worlds/IARC Floor/: model.config
quadcopter_test/worlds/IARC Floor/materials/scripts/: asphalt.material
quadcopter_test/worlds/green_line/: model.config  model.sdf
quadcopter_test/worlds/green_line/materials/scripts/: green.material
quadcopter_test/worlds/red_line/: model.config  model.sdf
quadcopter_test/worlds/red_line/materials/scripts/: red.material
quadcopter_test/worlds/white_line/: model.config  model.sdf
quadcopter_test/worlds/white_line/materials/scripts/: white.material
roomba/: CMakeLists.txt  package.xml
roomba/launch/: gazebo.launch  roomba-gazebo.launch
roomba/sdf/: roomba.sdf
roomba/src/: roomba.cpp  roomba3.cpp
